# guide-dog

./: .gitignore  LICENSE  README.md
src/DOGZILLALib/.ipynb_checkpoints/: setup-checkpoint.py
src/DOGZILLALib/DOGZILLALib/: DOGZILLALib.py
src/DOGZILLALib/DOGZILLALib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bringup/: package.xml  setup.py
src/bringup/bringup/: path2pose.py
src/bringup/config/: nav2_params.yaml  slam_params.yaml
src/bringup/launch/: Navigation_bringup.launch.py  bringup.launch.py
src/chairdetection/: astra.yaml  package.xml  setup.cfg  setup.py
src/chairdetection/chairdetection/: chair_detector.py
src/controller/: setup.py
src/controller/controller/: controller.py  goal2plan.py
src/controller/launch/: customnav.launch.py
src/oradar_lidar/launch/: ms200_scan.launch.py  ms200_scan_view.launch.py
src/oradar_lidar/src/: oradar_scan_node.cpp
src/voice_command/: package.xml  setup.py
src/voice_command/voice_command/: voice_command.py
src/yahboom_base/: setup.py
src/yahboom_base/config/: ekf.yaml
src/yahboom_base/yahboom_base/: base.py
src/yahboom_description/launch/: yahboom_urdf.launch.py
src/yahboom_description/urdf/: yahboom_xgo_rviz.xacro
src/yahboom_dog_joint_state/: setup.py
src/yahboom_dog_joint_state/launch/: yahboom_dog_joint_state.launch.py
src/yahboom_dog_joint_state/yahboom_dog_joint_state/: imunode.py  odometry.py  test.py  yahboom_dog_joint_state.py
src/yahboom_msgs/: CMakeLists.txt
src/yahboom_msgs/msg/: PerfStamp.msg
(+1 files in other folders)
