<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>voice_command</exec_depend>
  <exec_depend>yahboom_laser</exec_depend>
  <exec_depend>oradar_lidar</exec_depend>
  <exec_depend>yahboom_dog_joint_state</exec_depend>
  <exec_depend>yahboom_base</exec_depend>
  <exec_depend>yahboom_description</exec_depend>
  <exec_depend>tf_publisher</exec_depend>
  <exec_depend>wit_ros2_imu</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
